# slang

./: .envrc  .gitmodules  CMakeLists.txt  clean.sh  default.nix  fix-shutdown-use-after-free.patch  flake.nix  gdb-pretty.py  hidden-llvm.patch  init-worktree.sh  link-slang-utils.sh  meson.build  meson.options  meson_notes.md  meson_options.txt  premake5.lua  slang-gfx.h  slang.sln  test.txt
.github/workflows/: build-llvm-test.yml  ci.yml  format.yml  release-windows.yml  slash-command-dispatch.yml
cmake/: CompilerFlags.cmake  SlangTarget.cmake
docs/user-guide/: toc.html
prelude/: meson.build
source/compiler-core/: meson.build
source/core/: meson.build
source/slang/: CMakeLists.txt  hlsl.meta.slang  meson.build  slang-capability-defs.h  slang-compiler.cpp
source/slang-glslang/: slang-glslang.cpp
source/slang-stdlib/: CMakeLists.txt  slang-embedded-stdlib-source.cpp
source/slangc/: meson.build
tests/nv-extensions/: nv-ray-tracing-motion.slang  nv-ray-tracing-motion.slang.glsl
tests/nv-internal/: micro-mesh-intrinsic.slang
tests/slang-extension/: cas-int64-byte-address-buffer.slang
tools/: CMakeLists.txt
tools/gfx/: meson.build  render.cpp
tools/gfx-unit-test/: meson.build
tools/gfx-util/: meson.build
tools/gfx/d3d/: d3d-util.cpp
tools/gfx/d3d12/: d3d12-device.cpp
tools/platform/: meson.build
tools/render-test/: meson.build
tools/slang-cpp-extractor/: meson.build
tools/slang-embed/: meson.build  slang-embed.cpp
tools/slang-generate/: main.cpp  meson.build
tools/slang-lookup-generator/: meson.build
tools/slang-profile/: meson.build
tools/slang-reflection-test/: meson.build
tools/slang-spirv-embed-generator/: meson.build
tools/slang-test/: meson.build  slang-test-main.cpp
tools/slang-unit-test/: meson.build
tools/slangd/: meson.build
tools/test-process/: meson.build
tools/test-server/: meson.build
tools/unit-test/: meson.build
