option('enable-cuda', type : 'feature', value : 'auto',
  description : 'enable cuda tests using CUDA found in $CUDA_PATH')
option('enable-optix', type : 'feature', value : 'auto',
  description : 'enable OptiX build/tests, requires enable-cuda')
option('optix-sdk-path', type : 'string',
  description : 'path to the OptiX SDK')
option('enable-nvapi', type : 'feature', value : 'auto',
  description : 'use NVAPI as found in external/nvapi')
option('enable-xlib', type : 'feature', value : 'auto',
  description : 'build `gfx` and `platform` with xlib to support windowed apps on Linux')
option('enable-dx-on-vk', type : 'boolean', value : 'false',
  description : 'use dxvk and vkd3d-proton for DirectX support')
option('enable-aftermath', type : 'feature', value : 'auto',
  description : 'enable aftermath in GFX, and add aftermath crash example to project')

option('embed-stdlib', type : 'boolean', value : false,
  description : 'build slang with an embedded version of the stdlib')
option('embed-stdlib-source', type : 'boolean', value : false,
  description : 'do not include stdlib source in the binary')

option('enable-full-debug-validation', type : 'boolean', value : false,
  description : 'enable full IR validation in debug builds (SLOW!)')
option('enable-asan', type : 'boolean', value : false,
  description : 'enable ASAN (address sanitizer)')

# vi: ft=meson
