option('embed-stdlib', type : 'boolean', value : false,
  description : 'build slang with an embedded version of the stdlib')
option('embed-stdlib-source', type : 'boolean', value : false,
  description : 'do not include stdlib source in the binary')
option('full-debug-validation', type : 'boolean', value : false,
  description : 'enable full IR validation in debug builds (SLOW!)')
option('enable-aftermath', type : 'boolean', value : false,
  description : 'enable aftermath in GFX, and add aftermath crash example to project')
option('enable-xlib', type : 'boolean', value : true,
  description : 'build `gfx` and `platform` with xlib to support windowed apps on Linux')
option('enable-nvapi', type : 'boolean', value : false,
  description : 'use NVAPI as found in external/nvapi')
option('enable-cuda', type : 'boolean', value : false,
  description : 'enable cuda tests using CUDA found in $CUDA_PATH')

# newoption {
#     trigger     = "skip-source-generation",
#     description = "(Optional) If true will skip source generation steps.",
#     value       = "bool",
#     default     = "false",
#     allowed     = { { "true", "True"}, { "false", "False" } }
# }
